<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.MainFragment">

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:animateLayoutChanges="true"
        android:layout_marginTop="5sp"
        android:layout_marginRight="8sp"
        android:layout_marginLeft="8sp"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="false">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/white"
            android:shadowColor="@color/black"
            android:gravity="center"
            android:text="@string/location_instructions"
            android:textSize="12sp" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"
        android:weightSum="3"
        android:gravity="center">
        <Button
            android:id="@+id/btn_retry_location"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:textSize="9sp"
            android:layout_weight="1"
            android:text="@string/btn_retry_location" />

        <Button
            android:id="@+id/btn_save_location"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:textSize="9sp"
            android:layout_weight="1"
            android:text="@string/btn_save_location" />

        <Button
            android:id="@+id/btn_delete_location"
            android:layout_width="0sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:textSize="9sp"
            android:layout_weight="1"
            android:text="@string/btn_delete_location" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:tag="test_map"
        tools:context=".MapsActivity" />

</LinearLayout>
