<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15sp"
            tools:context=".ui.PeluqueriaListFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".ui.PeluqueriaListFragment">
                <!--Direccion-->
                <include
                    android:id="@+id/layDireccion"
                    layout="@layout/direccion_actual" />

                <!--Ordenamiento-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10sp"
                    android:layout_marginTop="10sp"
                    android:layout_marginRight="10sp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bck_rounded_corners_30"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_sort_name"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/peluqueria_sort_name"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="10sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bck_rounded_corners_30"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_sort_distance"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/peluqueria_sort_distance"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="10sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bck_rounded_corners_30"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_sort_rating"
                            style="?android:attr/buttonBarButtonStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:text="@string/peluqueria_sort_rating"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textSize="10sp" />
                    </LinearLayout>
                </LinearLayout>

                <!--Lista de Peluquerias-->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_peluquerias"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10sp"
                    android:scrollbars="vertical" />

            </LinearLayout>

            <!--Boton ubicacion-->
        </FrameLayout>
    </androidx.core.widget.NestedScrollView>

    <ImageButton
        android:id="@+id/btn_ubicacion_peluquerias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30sp"
        android:layout_marginBottom="30sp"
        android:background="@drawable/bck_rounded_corners_30"
        android:backgroundTint="?colorPrimary"
        android:minWidth="50sp"
        android:minHeight="50sp"
        android:src="@drawable/ic_baseline_location_on"
        android:tint="@color/white" />

</RelativeLayout>
